# tweets-out

./: .gitignore  Cargo.toml  Post.toml  Post.toml.example  README.md  db.toml.example
migrations/: 20231222091343_posts.sql
src/: args.rs  database.rs  emoji.rs  main.rs  posts.rs  table.rs  utils.rs
