[package]
name = "tweets-out"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
dialoguer = "0.11.0"
emojis = "0.6.1"
serde = { version = "1.0.193", features = ["derive"]}
anyhow = "1.0"
futures = "0.3"
sqlx = { version = "0.6.2", features = ["sqlite", "runtime-tokio-native-tls"] }
structopt = "0.3"
tokio = { version = "1.20.0", features = ["rt", "macros"]}
clipboard = "0.5.0"
arboard = "3.3.0"
config = "0.13.4"
lazy_static = "1.4.0"
